--- a/index.html
+++ b/index.html
@@ -21,27 +21,28 @@
                     <button class="add-btn"><i class="fas fa-plus"></i></button>
                 </div>
             </div>
-            <div class="nav-center">
-                <div class="nav-header">
-                 <p class="select-task-done-or-delete">All task</p>
-                  <button class="nav-toggle">
-                    <i class="fas fa-sort-down i"></i>
-                  </button>
-                </div>
-                <ul class="links">
-                  <li>
-                    <button class="all-tasks-btn">All task</button>
-                  </li>
-                  <li>
-                    <button class="completed-tasks-btn">Completed</button>
-                  </li>
-                  <li>
-                    <button class="deleted-tasks-btn">Deleted</button>
-                  </li>
-                </ul>
+              <div class="test2">
+                <div class="nav-center">
+                    <div class="nav-header">
+                    <h2 class="select-task-done-or-delete">All task</h2>
+                      <button class="nav-toggle">
+                        <i class="fas fa-sort-down i"></i>
+                      </button>
+                    </div>
+                    <ul class="links">
+                      <li>
+                        <button class="all-tasks-btn">All task</button>
+                      </li>
+                      <li>
+                        <button class="completed-tasks-btn">Completed</button>
+                      </li>
+                      <li>
+                        <button class="deleted-tasks-btn">Deleted</button>
+                      </li>
+                    </ul>
+                  </div>
               </div>
-            </nav>
-        </div>
+         </div>
         <div class="to-do-task-all" id="to-do-all-task"></div>
     </main>
 </body>
